--- a/All AngularJs Concept/index.html
+++ b/All AngularJs Concept/index.html
@@ -18,7 +18,7 @@
     <body ng-controller="homtCtrl">
         <div class="container" style="background-color:#2196F3;color:#fff;height: 120px;
     text-align: center;">
-          <h1>HireCraft Pvt.</h1>
+          <h1>HireCraft Pvt</h1>
           <p><strong>Ui-Router Concept</strong></p>
         </div>
 <br>
