--- a/Infilect's Task/index.html
+++ b/Infilect's Task/index.html
@@ -12,7 +12,10 @@
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular-animate.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular-aria.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular-messages.min.js"></script>
-<script src="node_modules/angular-material/angular-material.min.js"></script> 
+<script src="node_modules/angular-material/angular-material.min.js"></script>
+<script src="node_modules/moment/moment.js"></script> 
+<script src="node_modules/chart.js/dist/Chart.min.js"></script>
+<script src="node_modules/angular-chart.js/dist/angular-chart.min.js"></script>
 <script src="script/app.js"></script>
 <script src="script/service.js"></script>
 <script src="script/controller/search.js"></script>
